<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/sort_by_name"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_name"
                    android:title="@string/sort_by_name" />
                <item
                    android:id="@+id/action_sort_date"
                    android:title="@string/sort_by_date" />
                <item
                    android:id="@+id/action_sort_size"
                    android:title="@string/sort_by_size" />
                <item
                    android:id="@+id/action_sort_type"
                    android:title="@string/sort_by_type" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete_selected"
        android:visible="false"
        app:showAsAction="always" />
</menu>
